@startuml optimizers
!pragma useIntermediatePackages false

abstract class optimizers.baseoptimizer.BaseVQEOptimizer {
  name: None
  gradient_method: None
  max_iterations: None
  convergence_threshold: None
  plateau_window: None
  plateau_tolerance: None
  print_every: None
}
class optimizers.adam.Adam {
  method: None
  opt: None
}
class optimizers.cobyla.Cobyla {
  method: None
  rhobeg: None
}
class optimizers.optimizers.OptimizerFactory {
}
optimizers.baseoptimizer.BaseVQEOptimizer <|-- optimizers.adam.Adam
optimizers.baseoptimizer.BaseVQEOptimizer <|-- optimizers.cobyla.Cobyla
footer Generated by //py2puml//
@enduml
